# macbook_power

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup_app.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.scripts/: build_app.sh  build_dist.sh  dmg_settings.py  generate_icons.py  setup_project.sh
assets/branding/: logo-mark.icns
src/macbook_power/: __init__.py  app.py  battery.py  eta.py  launch_at_login.py  main.py  temperatures.py  updater.py
tests/: test_app_formatting.py  test_battery_parser.py  test_eta.py
