[project]
name = "macbook-power"
version = "0.1.0"
description = "macOS menubar widget that shows charging speed and time-to-full estimate"
readme = "README.md"
requires-python = ">=3.9, <3.14"
authors = [
    { name = "Michal Hons" }
]
dependencies = [
    "rumps>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]
mac = [
    "py2app>=0.28",
    "dmgbuild>=1.6.1",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
macbook-power-widget = "macbook_power.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
